--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,13 +75,54 @@ body{
 
 /*--------------------------------------------------------------------------------Index*/
 /*--------------------------------------------------Hero image*/
+.hero{
+    width:100%;
+    height:700px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/gym.png)no-repeat center center;
+}
 
+
+
+#cover { 
+   position: absolute; 
+   text-align:center;
+   top: 35%; 
+   width: 100%; 
+}
+#cover h1{
+    color:#16A5B9;
+    font-size:100px;
+}
+#cover h2{
+    color:#fafafa;
+    font-size:50px;
+}
+#cover h3{
+    color:#fafafa;
+    }
+
+@keyframes hero-zoom {
+    from{
+      transform: scale(1);
+    }
+    to{
+      transform: scale(1.1);
+    }
+  }
+#welcome{
+    z-index: 100;
+    position: absolute;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    left: 150px;
+    top: 350px;
+}
 /*----------------------------------------------------------------------------Locations*/
 /*----------------------------------------------------------------------------Sign Up*/
 /*--------------------------------------------------Footer*/
 footer{
     background-color:#16A5B9;
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
