--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ body{
 p{
     color:black;
 }
+h5{
+    text-align:center;
+    padding-bottom:30px;
+}
 /*--------------------------------------------------Nav*/
 .nav-color{
     background-color:#fafafa;;
@@ -147,33 +151,10 @@ footer{
     color:orange;
 }
 
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
-#team {
-  
-}
 
-.btn-primary:hover,
-.btn-primary:focus {
-    
 
-    
-}
 
-.btn-primary {
-    
 
-}
-
-section {
-    padding: 60px 0;
-}
-
-section .section-title {
-    text-align: center;
-    color: #16A5B9;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-}
 
 #team .card {
     border: none;
@@ -255,11 +236,7 @@ section .section-title {
 .frontside .card,
 .backside .card {
     min-height: 312px;
-}
-
-.backside .card a {
-    font-size: 18px;
-    color: black !important;
+    width:300px;
 }
 
 .frontside .card .card-title,
@@ -270,8 +247,18 @@ section .section-title {
     padding-top:100px;
 }
 
-.frontside .card .card-body img {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
+.backside h4{
+    padding-top:0;
 }
+.card-text{
+
+    list-style:none;
+    font-size:20px;
+    padding-top:15px;
+}
+
+.card-text h1{
+    font-size:25px;
+    padding-top:20px;
+}
+
