--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ h5{
     margin-right: auto;
     margin-left:auto;
     color:inherit;
-    padding-top:30px;
+    padding-top:20px;
 }
 
 #login a, #nav-logo a{
@@ -70,8 +70,8 @@ h5{
 .links-hover a:hover{
     color:orange;
 }
-
-@media screen and (max-width: 1200px ){
+/*------------------------------Mobile Nav Bar*/
+@media screen and (max-width: 1000px ){
     #login{
         display:none;
     }
@@ -270,6 +270,45 @@ h5{
     font-size:25px;
     padding-top:20px;
 }
+#membership button{
+    margin-top:10px;
+}
+/*--------------------------------------------------Phone Version*/
+#mobile-member{
+    display:none;
+}
+@media screen and (max-width: 1000px ){
+    #mobile-member{
+        display:block;
+    }
+    #membership{
+        display:none;
+    }
+
+}
+.boxed {
+    overflow:hidden;
+    text-align:center;
+    background:#e5e5e5;
+    width:100%;
+    height:250px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom: 10px;
+    margin-top:20px;
+}
+.boxed h1{
+    padding-top:10px;
+    text-transform: uppercase;
+    font-size:30px;
+}
+
+.mob-card-text{
+    font-size:20px;
+    list-style:none;
+    text-align:center;
+}
+
 
 
 /*--------------------------------------------------Reviews*/
