--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,12 @@
     padding:0;
     border:0;
 }
+
 body{
     color:#16A5B9;
     font-family:"Red hat display", sans-serif;
     background-color:#fafafa;
+    letter-spacing:2px;
 }
 p{
     color:black;
@@ -132,6 +134,12 @@ h5{
     to{
       transform: scale(1.1);
     }
+  }
+
+  @media only screen and (max-width: 600px){
+      #cover h1{
+          top:45%;
+      }
   }
 /*--------------------------------------------------What we offer you*/
 .offer-you h1{
@@ -273,6 +281,7 @@ h5{
 #membership button{
     margin-top:10px;
 }
+
 /*--------------------------------------------------Phone Version*/
 #mobile-member{
     display:none;
@@ -353,7 +362,57 @@ h5{
 
 /*------------------------------------------*/
 
-/*----------------------------------------------------------------------------Locations*/
+/*----------------------------------------------------------------------------------------------------------------------------------------------Locations*/
+/*----------------------------------------------------------------------------Location Images*/
+#loc-section{
+    
+}
+
+.newcastle{
+    object-fit:cover;
+    width:100%;
+    height:800px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/newcastle1.jpg)no-repeat center center;
+
+}
+.london{
+    object-fit:cover;
+    width:100%;
+    height:800px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/london1.jpg)no-repeat center center;
+ 
+}
+
+.manchester{
+    object-fit:cover;
+    width:100%;
+    height:800px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/manchester1.jpg)no-repeat center center;
+ 
+}
+
+.loc-cover { 
+    color:#fafafa;
+    position: absolute; 
+    text-align:center;
+    letter-spacing: 4px;
+    top: 35%; 
+    width: 100%; 
+}
+/*----------------------------------------------------------------------------Image animation*/
+
+ 
+/*----------------------------------------------------------------------------Maps*/
+.map-pad{
+    padding:30px;
+}
+
+.text-pad{
+    text-align:center;
+    padding:50px;
+}
+
+
 /*----------------------------------------------------------------------------Sign Up*/
 /*--------------------------------------------------Footer*/
 footer{
