--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,6 +373,7 @@ h5{
     width:100%;
     height:800px;
     background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/newcastle1.jpg)no-repeat center center;
+   
 
 }
 .london{
@@ -401,17 +402,43 @@ h5{
 }
 /*----------------------------------------------------------------------------Image animation*/
 
- 
 /*----------------------------------------------------------------------------Maps*/
 .map-pad{
-    padding:30px;
+    padding-top:120px;
+    padding-left:100px;
 }
 
 .text-pad{
     text-align:center;
     padding:50px;
 }
+#maps h1{
+    padding-bottom:10px;
+}
+#maps h2{
+    padding-bottom:10px;
+}
+#maps h3{
+    color:black;
+    font-size:20px;
+}
+#maps li{
+    color:black;
+    padding-top:10px;
+    list-style:none;
+}
+#map-box{
+    height:200px;
+    width:200px;
+    background-color:#16A5B9;
 
+}
+
+.futuregym{
+    overflow:hidden;
+    display:inline-block;
+    width:200%;
+}
 
 /*----------------------------------------------------------------------------Sign Up*/
 /*--------------------------------------------------Footer*/
