--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,13 +434,41 @@ h5{
 
 }
 
-.futuregym{
-    overflow:hidden;
-    display:inline-block;
-    width:200%;
+.gympics{
+    height:600px;
+    width:100%;
+    padding-bottom: 30px;
 }
 
+.ourgyms h1{
+    text-align: center;
+    padding-top:10px;
+}
+
+.ourgyms p{
+    text-align:center;
+    padding-top:10px;
+    padding-bottom:20px;
+}
+
+.joinbtn{
+    text-align:center;
+    padding-bottom:50px;
+}
+
+.buttons{
+    text-align:center;
+}
 /*----------------------------------------------------------------------------Sign Up*/
+
+#signup-section{
+    overflow:hidden;
+}
+.signup{
+    width:100%;
+    height:800px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/gym.png)no-repeat center center;
+}
 /*--------------------------------------------------Footer*/
 footer{
     background-color:#16A5B9;
