--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,13 +461,39 @@ h5{
 }
 /*----------------------------------------------------------------------------Sign Up*/
 
-#signup-section{
-    overflow:hidden;
-}
-.signup{
+.sign-up-pic{
     width:100%;
     height:800px;
-    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/gym.png)no-repeat center center;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/signup.jpg)no-repeat center center;
+ 
+}
+.signup-cover { 
+    color:#fafafa;
+    position: absolute; 
+    text-align:center;
+    letter-spacing: 4px;
+    top: 20%; 
+    width: 100%; 
+}
+.signup-cover form{
+    width:50%;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.signup-cover label{
+    float:left;
+    color:#fafafa;
+    font-size:20px;
+}
+.signup-cover input{
+    color:#fafafa;
+    background-color:transparent;
+}
+
+.signup-cover select{
+    color:#fafafa;
+    background-color:transparent;
 }
 /*--------------------------------------------------Footer*/
 footer{
