--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ h5{
    width: 100%; 
 }
 
+
 #cover h1{
     color:#16A5B9;
     font-size:100px;
@@ -459,6 +460,95 @@ h5{
 .buttons{
     text-align:center;
 }
+
+
+/*----------------------------------------------------------------------------Mobile*/
+
+@media screen and (max-width: 1000px ){
+
+.col-md-6{
+    position:relative;
+    float:left;
+
+}
+
+.loc-cover h1{
+    font-size:20px;
+
+}
+
+.newcastle{
+
+width:100%;
+height:500px;
+background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/newcastle1.jpg)no-repeat center center;
+
+
+}
+
+.london{
+
+    width:100%;
+    height:500px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/london1.jpg)no-repeat center center;
+ 
+}
+
+.manchester{
+
+    width:100%;
+    height:500px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/manchester1.jpg)no-repeat center center;
+ 
+}
+
+.map-pad{
+    display:none;
+    
+
+    
+}
+
+.text-pad{
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
+    width:100%;
+}
+
+.gympics{
+    height:400px;
+    width:100%;
+    padding-bottom: 30px;
+}
+}
+
+@media screen and (max-width: 600px ){
+    .newcastle{
+
+    width:100%;
+    height:300px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/newcastle1.jpg)no-repeat center center;
+   
+
+}
+.london{
+
+    width:100%;
+    height:300px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/london1.jpg)no-repeat center center;
+ 
+}
+
+.manchester{
+
+    width:100%;
+    height:300px;
+    background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/manchester1.jpg)no-repeat center center;
+ 
+}
+
+}
 /*----------------------------------------------------------------------------Sign Up*/
 
 .sign-up-pic{
@@ -494,6 +584,14 @@ h5{
 .signup-cover select{
     color:#fafafa;
     background-color:transparent;
+}
+
+#enquiries h1{
+    text-align:center;
+    color: black;
+    padding-top:30px;
+    padding-bottom:30px;
+    font-size: 20px;
 }
 /*--------------------------------------------------Footer*/
 footer{
