--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,11 +466,7 @@ h5{
 
 @media screen and (max-width: 1000px ){
 
-.col-md-6{
-    position:relative;
-    float:left;
 
-}
 
 .loc-cover h1{
     font-size:20px;
@@ -480,7 +476,7 @@ h5{
 .newcastle{
 
 width:100%;
-height:500px;
+height:200px;
 background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/newcastle1.jpg)no-repeat center center;
 
 
@@ -489,7 +485,7 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
 .london{
 
     width:100%;
-    height:500px;
+    height:200px;
     background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/london1.jpg)no-repeat center center;
  
 }
@@ -497,7 +493,7 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
 .manchester{
 
     width:100%;
-    height:500px;
+    height:200px;
     background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/manchester1.jpg)no-repeat center center;
  
 }
@@ -527,7 +523,7 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
     .newcastle{
 
     width:100%;
-    height:300px;
+    height:200px;
     background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/newcastle1.jpg)no-repeat center center;
    
 
@@ -535,7 +531,7 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
 .london{
 
     width:100%;
-    height:300px;
+    height:200px;
     background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/london1.jpg)no-repeat center center;
  
 }
@@ -543,13 +539,13 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
 .manchester{
 
     width:100%;
-    height:300px;
+    height:200px;
     background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/manchester1.jpg)no-repeat center center;
  
 }
 
 }
-/*----------------------------------------------------------------------------Sign Up*/
+/*----------------------------------------------------------------------------------------------------------------------------------------Sign Up*/
 
 .sign-up-pic{
     width:100%;
@@ -592,6 +588,26 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
     padding-top:30px;
     padding-bottom:30px;
     font-size: 20px;
+}
+#mobile-signup{
+        display:none;
+    }
+
+@media screen and (max-width: 1000px ){
+
+    #mobile-signup{
+        display:block;
+    }
+    #mobile-signup form{
+        padding-left:10px;
+        padding-right:10px;
+        width:80%;
+    }
+
+    #signup-form{
+        display:none;
+    }
+
 }
 /*--------------------------------------------------Footer*/
 footer{
