Added gallery page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,8 +599,7 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
         display:block;
     }
     #mobile-signup form{
-        padding-left:10px;
-        padding-right:10px;
+
         width:80%;
     }
 
@@ -609,8 +608,51 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
     }
 
 }
+
+/*----------------------------------------------------------------------------------------------------------------------------------------Gallery*/
+#gallery img{
+    overflow:hidden;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
+
 /*--------------------------------------------------Footer*/
 footer{
+    margin-top:30px;
     background-color:#16A5B9;
     left: 0;
     bottom: 0;
