--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,9 +16,6 @@ p{
     color:black;
 }
 
-a{
-    
-}
 /*--------------------------------------------------Nav*/
 .nav-item{
     padding-top:10px;
@@ -31,6 +28,7 @@ a{
     color: inherit;
     list-style:none;
     font-size:18px;
+    
 }
 
 #menu-button{
@@ -43,6 +41,7 @@ a{
     text-align: center;
     color:inherit;
     padding-top:20px;
+    padding-left:90px;
 }
 
 #login a, #nav-logo a{
@@ -79,6 +78,7 @@ a{
         float:right;
         margin:0;
         padding-top:10px;
+        padding-left:0;
     }
 }
 
@@ -143,8 +143,10 @@ a{
     padding-top:100px;
 }
 .offer-you p{
+    margin-left:auto;
+    margin-right:auto;
     padding-top:40px;
-    font-size:20px;
+    font-size:100%;
 }
 
 /*--------------------------------------------------Our Team*/
@@ -158,7 +160,7 @@ a{
 }
  .our-team p{
      text-align:center;
-     font-size:20px;
+     font-size:100%;
  }
 
 .our-team h5{
@@ -255,6 +257,7 @@ h5{
 .backside .card {
     min-height: 312px;
 
+
 }
 
 .frontside .card .card-title,
@@ -269,9 +272,8 @@ h5{
     padding-top:0;
 }
 .card-text{
-
     list-style:none;
-    font-size:20px;
+    font-size:100%;
     padding-top:15px;
 }
 .card-text h1{
@@ -280,8 +282,11 @@ h5{
 }
 #membership button{
     margin-top:10px;
+    text-decoration:none;
 }
-
+.buttonprice {
+    text-decoration:none;
+}
 /*--------------------------------------------------Phone Version*/
 #mobile-member{
     display:none;
@@ -327,8 +332,14 @@ h5{
 
 /*--------------------------------------------------Reviews*/
 #reviews{
+    margin-top:100px;
     padding-bottom:50px;
 }
+
+#review-title{
+    text-align:center;
+}
+
 .badge {
     background-color:#16a5b9;
     color:#fafafa;
@@ -365,8 +376,12 @@ h5{
     padding-left: 0px
 }
 
-/*------------------------------------------*/
+@media screen and (max-width: 1000px ){
+    #review-title{
+    display:none;
+}
 
+}
 /*----------------------------------------------------------------------------------------------------------------------------------------------Locations*/
 /*----------------------------------------------------------------------------Location Images*/
 
@@ -451,6 +466,8 @@ h5{
 }
 
 .ourgyms p{
+    padding-left:20px;
+    padding-right:20px;
     text-align:center;
     padding-top:10px;
     padding-bottom:20px;
