--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,11 +143,12 @@ p{
     padding-top:100px;
 }
 .offer-you p{
-    margin-left:auto;
-    margin-right:auto;
-    padding-top:40px;
+    padding-top:0px;
     font-size:100%;
+    padding-left:80px;
+    padding-right:80px;
 }
+
 
 /*--------------------------------------------------Our Team*/
 .our-team h1{
