--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,33 +146,58 @@ p{
 .offer-you p{
     padding-top:0px;
     font-size:100%;
-    padding-left:200px;
-    padding-right:200px;
 }
 
 
 /*--------------------------------------------------Our Team*/
-.card-body{
-    height:300px;
+.team-card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 90%;
+    max-height:100%;
+    margin: auto;
+    margin-top:20px;
+    text-align: center;
 }
-.our-team h1{
-    text-align:center;
-    padding-top:100px;
-}
-
-.our-team img{
+.team-card img{
+    height:100%;
     width:100%;
-    height:250px;
+}
+.title {
+  color:#16A5B9;
+  font-size: 100%;
 }
 
- .our-team p{
-     text-align:center;
-     font-size:100%;
- }
+.team-card p{
+    font-size:100%;
+}
 
-.our-team h5{
-    padding:0;
-    margin:0;
+.team-card button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #16A5B9;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 100%;
+}
+
+.team-card button:hover, a:hover {
+  opacity: 0.7;
+  color:orange;
+}
+
+.team-card a {
+    float: left;
+    font-size: 100%;
+    color:#16A5B9;
+}
+
+.padding-0{
+    padding-right:0;
+    padding-left:0;
 }
 
 /*--------------------------------------------------Memberships*/
@@ -628,9 +653,7 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
         display:none;
     }
 
-.input[type=submit]{
-    background-color:#16A5B9;
-}
+
 
 @media screen and (max-width: 1000px ){
 
@@ -665,7 +688,7 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
     overflow:hidden;
 }
 
-.row {
+.gallery row {
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
@@ -700,7 +723,12 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
 }
 
 
-
+.top-btn{
+    text-align:right;
+    padding-bottom:20px;
+    padding-right:20px;
+    font-size:10px;
+}
 /*--------------------------------------------------Footer*/
 footer{
     min-height: 100%;
