--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,9 +421,7 @@ h5{
 }
 /*----------------------------------------------------------------------------------------------------------------------------------------------Locations*/
 /*----------------------------------------------------------------------------Location Images*/
-#loc-section{
 
-}
 .newcastle{
     object-fit:cover;
     width:100%;
@@ -466,8 +464,8 @@ h5{
 
 /*----------------------------------------------------------------------------Maps*/
 .map-pad{
-    padding-top:120px;
-    padding-left:100px;
+    padding-top:70px;
+    padding-bottom:20px;
 }
 
 .text-pad{
@@ -508,8 +506,8 @@ h5{
 }
 
 .ourgyms p{
-    padding-left:20px;
-    padding-right:20px;
+    width:100%;
+    font-size:100%;
     text-align:center;
     padding-top:10px;
     padding-bottom:20px;
@@ -522,6 +520,12 @@ h5{
 
 .buttons{
     text-align:center;
+}
+
+.location-title{
+    text-align:center;
+    padding-top:20px;
+    padding-bottom:20px;
 }
 
 
@@ -602,6 +606,17 @@ background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0
     height:200px;
     background:linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/manchester1.jpg)no-repeat center center;
  
+}
+
+.text-pad{
+    padding-left:5px;
+    padding-right:0;
+    width:100%;
+    text-align:left;
+}
+
+.ourgyms p{
+    text-align:left;
 }
 
 }
