--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ p {
 #hero {
 	width: 100%;
 	height: 800px;
-	background: linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(/assets/images/hero-image.jpg)no-repeat center center;
+	background: linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(../images/hero-image.jpg)no-repeat center center;
 	animation-name: hero-zoom;
 	animation-duration: 5s;
 	animation-fill-mode: forwards;
