App section added to home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,12 @@ p {
     padding-top: 20px;
 }
 
+@media screen and (max-width: 600px) {
+    .app h1{
+        padding-top:20px;
+    }
+
+}
 
 /*--------------------------------------------------Our Team*/
 
