--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ p {
 }
 
 #menu-button {
-	float: center;
+	text-align: center;
 	color: #16A5B9;
 	font-size: 30px;
 }
@@ -194,6 +194,13 @@ p {
 
 }
 
+/*--------------------------------------------------Youtube*/
+
+.youtube{
+    width:100%;
+    height: 500px;
+    padding-bottom:30px;
+}
 /*--------------------------------------------------Our Team*/
 
 .team-card {
